# HW_19_2

./: .env.sample  README.md  catalog_data.json  pyproject.toml
apps/catalog/: admin.py  forms.py  models.py  services.py  services_transliteration.py  urls.py  views.py
apps/catalog/management/commands/: fill_category.py  fill_product.py
apps/catalog/migrations/: 0001_initial.py  0002_alter_product_preview.py  0003_alter_product_preview.py  0004_post.py  0005_alter_post_slug.py  0006_alter_post_is_published.py  0007_alter_post_is_published.py  0008_alter_post_is_published.py  0009_version.py  0010_product_owner.py  0011_product_is_published.py
apps/catalog/templates/: add_products.html  base.html  contacts.html  homepage.html  products.html  products_by_page.html
apps/catalog/templates/catalog/: base.html  contacts.html  homepage.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  products_by_page_list.html
apps/catalog/templates/catalog/includes/: inc_menu.html
apps/catalog/templates/includes/: inc_menu.html
apps/users/: forms.py  models.py  services.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_user_activated_user_activation_code.py  0003_rename_activated_user_is_activated.py
apps/users/templates/users/: activation.html  login.html  register.html  user_form.html
config/: settings.py  urls.py
